--- a/views/popup.html
+++ b/views/popup.html
@@ -25,6 +25,6 @@
     <div id="alias-list">Loading...</div>
   </div>
 
-  <script src="popup.js"></script>
+  <script src="../scripts/popup.js"></script>
 </body>
 </html>
