--- a/views/popup.html
+++ b/views/popup.html
@@ -16,9 +16,11 @@
 </head>
 <body>
   <h3>Set Alias</h3>
-  <input id="alias" placeholder="Alias (e.g., yt)" />
-  <input id="url" placeholder="URL (e.g., https://youtube.com)" />
-  <button id="save">Save</button>
+  <form id="alias-form">
+    <input id="alias" placeholder="Alias (e.g., yt)" required />
+    <input id="url" placeholder="URL (e.g., https://youtube.com)" required />
+    <button type="submit">Save</button>
+  </form>
 
   <div id="aliases">
     <h4>Saved Aliases</h4>
