--- a/views/popup.html
+++ b/views/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alias Navigator</title>
+  <title>URLias</title>
   <link rel="stylesheet" type="text/css" href="../assets/popupStyles.css">
 </head>
 <body>
