Have option to load some default aliases probably a better way to do this than have it in code, will look at it later

--- a/views/popup.html
+++ b/views/popup.html
@@ -11,7 +11,7 @@
     <input id="url" placeholder="URL (e.g., https://youtube.com)" required />
     <button type="submit">Save</button>
   </form>
-
+  <button id="load-defaults-btn" style="margin-top:10px;">Load Default Aliases</button>
   <div id="aliases">
     <h4>Saved Aliases</h4>
     <div id="alias-list">Loading...</div>
