Add search functionality

--- a/views/popup.html
+++ b/views/popup.html
@@ -14,6 +14,7 @@
   <button id="load-defaults-btn" style="margin-top:10px;">Load Default Aliases</button>
   <div id="aliases">
     <h4>Saved Aliases</h4>
+    <input id="search-aliases" type="text" placeholder="Search aliases or URLs..." />
     <div id="alias-list">Loading...</div>
   </div>
 
