Fix delete confirmation popup The delete confirmation popup was earlier showing up inside the extension. I have replaced that by using a custom popup which asks the user whether they want to delete the alias or not.

--- a/views/popup.html
+++ b/views/popup.html
@@ -18,6 +18,16 @@
     <div id="alias-list">Loading...</div>
   </div>
 
+  <div id="confirm-modal" class="modal">
+    <div class="modal-content">
+      <p id="modal-message"></p>
+      <div class="modal-buttons">
+        <button id="modal-cancel">Cancel</button>
+        <button id="modal-confirm">Delete</button>
+      </div>
+    </div>
+  </div>
+
   <script src="../scripts/popup.js"></script>
 </body>
 </html>
