--- a/views/popup.html
+++ b/views/popup.html
@@ -28,6 +28,6 @@
     </div>
   </div>
 
-  <script src="../scripts/popup.js"></script>
+  <script type="module" src="../scripts/popup.js"></script>
 </body>
 </html>
