Allow users to edit the search trigger keyword through the popup The users can have custom search trigger keywords instead of the default 'search'

--- a/views/popup.html
+++ b/views/popup.html
@@ -17,7 +17,13 @@
     <input type="text" id="search-aliases" placeholder="Search aliases or URLs..." />
     <div id="alias-list">Loading...</div>
   </div>
-
+  <div id="search-trigger-section">
+    <label for="search-trigger">Search trigger word:</label>
+    <div class="search-trigger-row">
+      <input id="search-trigger" placeholder="e.g., search, find, lookup" />
+      <button id="save-search-trigger">Save</button>
+    </div>
+  </div>
   <div id="confirm-modal" class="modal">
     <div class="modal-content">
       <p id="modal-message"></p>
