--- a/views/options.html
+++ b/views/options.html
@@ -48,6 +48,7 @@
               <option value="recent">Sort: Recently Added</option>
             </select>
           </div>
+          <div class="alias-hint">Click on an alias to edit it</div>
           <div id="alias-list" class="alias-list">Loading...</div>
         </div>
       </section>
@@ -79,29 +80,6 @@
             <button id="save-search-trigger">Save</button>
           </div>
           <p class="help-text">Use this word after an alias to search within that site (e.g., "yt search cats")</p>
-        </div>
-
-        <div class="form-group">
-          <label for="omnibox-behavior">Omnibox Behavior:</label>
-          <select id="omnibox-behavior">
-            <option value="current-tab">Open in current tab</option>
-            <option value="new-tab">Always open in new tab</option>
-            <option value="background-tab">Open in background tab</option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <label>
-            <input type="checkbox" id="auto-suggest" checked>
-            Enable auto-suggestions in omnibox
-          </label>
-        </div>
-
-        <div class="form-group">
-          <label>
-            <input type="checkbox" id="usage-tracking" checked>
-            Track alias usage for better suggestions
-          </label>
         </div>
       </section>
 
